[gd_scene load_steps=18 format=3 uid="uid://dtpn5wksg1o0v"]

[ext_resource type="Texture2D" uid="uid://b281d10cxmn3d" path="res://assets/sprites/coin.png" id="1_r68a5"]
[ext_resource type="Script" path="res://scripts/coin.gd" id="1_rfueh"]
[ext_resource type="AudioStream" uid="uid://5p1u4twlrq4w" path="res://assets/sounds/coin.wav" id="3_4m6ye"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h4xo7"]
atlas = ExtResource("1_r68a5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_on134"]
atlas = ExtResource("1_r68a5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lawmy"]
atlas = ExtResource("1_r68a5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_70rb3"]
atlas = ExtResource("1_r68a5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap3at"]
atlas = ExtResource("1_r68a5")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_03k8u"]
atlas = ExtResource("1_r68a5")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_isdyp"]
atlas = ExtResource("1_r68a5")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrp8q"]
atlas = ExtResource("1_r68a5")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2no10"]
atlas = ExtResource("1_r68a5")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_73kfa"]
atlas = ExtResource("1_r68a5")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcjg4"]
atlas = ExtResource("1_r68a5")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4i26"]
atlas = ExtResource("1_r68a5")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1gkar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4xo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on134")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lawmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70rb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap3at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03k8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isdyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrp8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2no10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73kfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcjg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4i26")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7fn4r"]
radius = 5.09902

[node name="Coin" type="Area2D"]
collision_mask = 2
script = ExtResource("1_rfueh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1gkar")
autoplay = "default"
frame_progress = 0.042335

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7fn4r")

[node name="pickup_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4m6ye")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="pickup_sound" to="." method="_on_pickup_sound_finished"]
